--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "body-parser": "^1.18.2",
     "ejs": "^2.5.8",
     "express": "^4.16.3",
+    "lodash": "^4.17.5",
     "valid-url": "^1.0.9"
   },
   "devDependencies": {},
